acm/odh-edge/apps/telemetry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opendatahub-edge-collector
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
